Pal 573 moved resource test file, update TestUtil to resolve all parents